--- a/modules/mdTruyenThong/fwNews/style.css
+++ b/modules/mdTruyenThong/fwNews/style.css
@@ -7,7 +7,7 @@
 
 .news .news_title{
     display: inline-block;
-    padding:16px;
+    padding:16px 0;
     margin-bottom: 25px;
 }
 
@@ -68,6 +68,7 @@
     flex-direction: column;
     justify-content: center;
     color:var(--color-primary);
+    padding: 16px 0;
 }
 
 .news .news_content .news_content_title{
@@ -108,4 +109,17 @@
     -webkit-line-clamp: 4; /* number of lines to show */
             line-clamp: 4; 
     -webkit-box-orient: vertical;
+}
+
+@media (max-width: 768px)  {
+    .wrap_den_voi_HP .wrap_item{
+        height: 220px;
+    }
+    .wrap_den_voi_HP .wrap_item .detail .description {
+        color: var(--color-primary);
+        font-size: 14px;
+        line-height: 15px;
+        text-align: justify;
+        padding: 0 8px;
+    }
 }
