--- a/public/home/styles/responsive.css
+++ b/public/home/styles/responsive.css
@@ -174,6 +174,10 @@
     .footer_contact {
         padding-top: 0;
     }
+
+    .services {
+        padding: 0;
+    }
 }
 
 
@@ -281,7 +285,7 @@
     }
     .header_content {
         padding-left: 15px;
-        padding-right: 30px;
+        padding-right: 15px;
     }
     .button {
         height: 40px;
