--- a/public/home/styles/styles.css
+++ b/public/home/styles/styles.css
@@ -296,6 +296,18 @@ section {
     height: 100%;
 }
 
+.parallax_background::after {
+    content:'';
+    display: block;
+    background-color: #000;
+    opacity: .7;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 .background_image {
     position: absolute;
     top: 0;
@@ -395,8 +407,8 @@ section {
 .header_content {
     width: 100%;
     height: 100px;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 78px;
+    padding-right: 102px;
 }
 
 .header.scrolled .header_content {
@@ -559,7 +571,8 @@ section {
     padding-top: 5px;
     padding-bottom: 5px;
     padding-left: 7px;
-    padding-right: 7px;  
+    padding-right: 7px;
+    float:right;
 }
 
 
@@ -982,7 +995,7 @@ section {
 .services {
     background: #FFFFFF;
     padding-top: 25px;
-    padding-bottom: 25px;
+    padding-bottom: 50px;
 }
 
 .services_row {
