--- a/modules/_default/fwHome/style.css
+++ b/modules/_default/fwHome/style.css
@@ -1618,6 +1618,9 @@
     .footer_image{
         width: 100%;
     }
+    .footer_bar {
+        margin-bottom: 48px;
+    }
 }
 
 @media (max-width: 768px){
@@ -1735,7 +1738,7 @@
 .text-logo{
     color:var(--color-logo) !important;
 }
-
+/* ----------------------------link_watch_more--------------------------- */
 .link_watch_more{
     display: inline-block;
     position: relative;
@@ -1792,6 +1795,7 @@
 }
 
 
+/* ----------------------------carousel--------------------------- */
 
 .carousel_equal_height .owl-stage{
     display: flex;
@@ -1826,4 +1830,63 @@
     font-size: 24px;
     font-weight: 700;
     color: var(--color-primary);
+}
+
+/* ----------------------------Home Contact--------------------------- */
+.home-contact{
+    position: fixed;
+    bottom: -1px;
+    z-index: 3;
+    max-height: 48px;
+    box-shadow: 0px 0px 10px whitesmoke;
+    display: none;
+}
+
+.home-contact-button{
+    flex:1;
+    display: flex;
+    font-size: 14px;
+    height: 100%;
+    padding:12px 0;
+    justify-content: center;
+    align-items: center;
+    color:var(--color-white);
+    background-color: var(--color-primary);
+}
+
+.home-contact-button:hover{
+    background-color: var(--color-primary-hover);
+    color:var(--color-white);
+}
+
+.home-contact-button i{
+    margin-right: 8px;
+    font-size: 24px;
+    position: relative;
+}
+
+.home-contact-button .zalo-icon::after{
+    content:'Zalo';
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+    color:var(--color-primary);
+    font-size: 10px;
+    font-weight: 600;
+}
+
+@media (max-width: 991px) {
+    .home-contact{
+        display: block;
+    }
+}
+
+@media (max-width: 767px) {
+    .home-contact-button span{
+        display: none;
+    }
+    .home-contact-button i{
+        margin-right: 0;
+    }
 }
